--- a/FOODHUT/contact.html
+++ b/FOODHUT/contact.html
@@ -204,7 +204,7 @@
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtme10pzgKSPeJVJrG1O3tjR6lk98o4w8&callback=initMap"
+      src=""
     ></script>
 
     <!-- FoodHut js -->
